load("@aspect_bazel_lib//lib:copy_directory.bzl", "copy_directory")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "x",
    srcs = ["x.cpp"],
    deps = ["@otel_sdk//:dll"]
)

copy_directory(
    name = "dashboards_dir",
    src = "dashboards",
    out = "dashboards",
    hardlink = "on",
)

native_binary(
    name = "perses",
    src = "@otel_sdk//:perses",
    data = ["dashboards_dir"],
    args = ["-config $(location dashboards_dir)/config.yaml"],
)

run_binary(
    name = "percli",
    outs = ["aux"],
    srcs = ["dashboards_dir"],
#    args = ["--percliconfig $(location dashboards_dir)/config.yaml"],
#    args = ["migrate", "--help"],
    tool = "@otel_sdk//:percli",
)

cc_binary(
    name = "proxy",
    srcs = ["proxy.cpp"],
    deps = [
        "@otel_sdk//:dll",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
        "@opentelemetry-proto//:logs_service_grpc_cc",
        "@opentelemetry-proto//:metrics_service_grpc_cc",
        "@opentelemetry-proto//:trace_service_grpc_cc",
    ],
)