load("@aspect_bazel_lib//lib:copy_directory.bzl", "copy_directory")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "x",
    srcs = ["x.cpp"],
    deps = ["@otel_sdk//:dll"],
    local = True,
    tags = ["manual", "external"],

    # Minimal set of env vars for Visual Studio
    env_inherit = [ 
        "windir", # Mandatory
        #"USERPROFILE", # In order to avoid creating %USERPROFILE%
    ],
)

# copy_directory(
#     name = "dashboards_dir",
#     src = "dashboards",
#     out = "dashboards",
#     hardlink = "on",
# )

# native_binary(
#     name = "percli_binary",
#     src = "@otel_sdk//:percli",
# )

# native_binary(
#     name = "perses",
#     src = "@otel_sdk//:perses",
#     data = ["dashboards_dir"],
#     args = ["-config $(rootpath dashboards_dir)/config.yaml"],
# )

# run_binary(
#     name = "perses_run",
#     outs = ["@otel_sdk//:perses"],
#     tool = "@otel_sdk//:perses",
#     args = ["--help","2>$(location 1.txt)"],
# )

# run_binary(
#     name = "percli",
#     outs = ["aux"],
#     srcs = ["dashboards_dir", "perses_run"],
# #    args = ["--percliconfig $(location dashboards_dir)/config.yaml"],
# #    args = ["migrate", "--help"],
#     tool = "@otel_sdk//:percli",
# )

# cc_binary(
#     name = "z",
#     srcs = ["z.cpp"],
# )