module(
    name = "otel_sdk_x",
    version = "0.1",
)

bazel_dep(name = "otel_sdk")
local_path_override(
    module_name = "otel_sdk",
    path = "..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
# Below is needed as we have "build --@curl//:use_mbedtls=true" from ..\.bazelrc
bazel_dep(name = "curl", version = "8.8.0.bcr.1")

# We need this to match the parent, as it's locally patched there
bazel_dep(name = "grpc", version = "1.66.0.bcr.3")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        # https://github.com/grpc/grpc/pull/37534
        # https://github.com/grpc/grpc/pull/37534.diff
        "bazel/grpc_bzlmod.diff",
        # https://github.com/grpc/grpc/pull/38101/files
        # https://github.com/grpc/grpc/pull/38101/commits/f093af21a9bc2a27156e7cd30744844797287253/patch
        # https://github.com/grpc/grpc/commit/f093af21a9bc2a27156e7cd30744844797287253.diff        
        "bazel/grpc_ares_fix_2.diff",
    ],
)

bazel_dep(name = "c-ares") #, version = "1.16.1")
archive_override(
    module_name = "c-ares", 
    urls=["https://github.com/malkia/c-ares/archive/5ff026975caa04eb25e02b21976be5aace7da3c8.zip"], 
    integrity = "sha256-nlYybA2PLmf6hzcaFxCoVQ0+QWOyw0NOii3pUr+AsbQ=",
    strip_prefix="c-ares-5ff026975caa04eb25e02b21976be5aace7da3c8"
)

# ditto here

bazel_dep(name = "opentelemetry-proto" ) #, version = "1.3.2")
archive_override(
    module_name = "opentelemetry-proto",
    integrity = "sha256-wGnA2WE3zwBdNEEfpn3TtvH4xkrx5/sv4AiaQcQlrNc=",
    patch_strip = 1,
    # Copied from https://github.com/bazelbuild/bazel-central-registry/tree/main/modules/opentelemetry-proto/1.3.1/patches
    patches = ["bazel/opentelemetry-proto.patch"],
    strip_prefix = "opentelemetry-proto-1.3.2",
    urls = "https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v1.3.2.tar.gz",
)

bazel_dep(name = "prometheus-cpp") #, version = "1.2.4")
archive_override(
    module_name = "prometheus-cpp",
    integrity = "sha256-uElFYvmIrzXsElYbbrNS0Mvtfj99aKae2nhsZhCvxG4=",
    strip_prefix = "prometheus-cpp-6492e820cdff7e7345d46d82b43735aaea542098",
    urls = "https://github.com/jupp0r/prometheus-cpp/archive/6492e820cdff7e7345d46d82b43735aaea542098.zip",
)

use_repo(
    use_extension("@bazel_tools//tools/cpp:cc_configure.bzl", "cc_configure_extension"),
    "local_config_cc",
)

bazel_dep(name = "rules_cue", version = "0.8.3")
