module(
    name = "otel_sdk_x",
    version = "0.1",
)

bazel_dep(name = "otel_sdk")
local_path_override(
    module_name = "otel_sdk",
    path = "..",
)
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
single_version_override(
    module_name = "abseil-cpp",
    patch_strip = 1,
    patches = [
        "bazel/absl_win10_cache_zone.patch",
    ],
)
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boringssl", version = "0.20241209.0")
bazel_dep(name = "curl", version = "8.8.0.bcr.2")
bazel_dep(name = "depend_on_what_you_use", version = "0.5.0")
bazel_dep(name = "google_benchmark", version = "1.8.5")
bazel_dep(name = "googletest", version = "1.15.2")

bazel_dep(name = "grpc", version = "1.68.0")
single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "bazel/grpc_ares_fix.patch",
    ],
)

bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.17")
single_version_override(
    module_name = "rules_cc", version = "0.0.17"
)
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "opentracing-cpp", version = "1.6.0")
bazel_dep(name = "rules_multitool", version = "1.0.0")

bazel_dep(name = "c-ares", version = "1.16.1")
archive_override(
    module_name = "c-ares", 
    urls=["https://github.com/malkia/c-ares/archive/548f7f9d3fa42bd4874b6c4b2979ea1fd2cd6952.zip"], 
    integrity = "sha256-sO3H/U6fRoXGntJujkdyVMel636mDOJhB27rutS8r98=",
    strip_prefix="c-ares-548f7f9d3fa42bd4874b6c4b2979ea1fd2cd6952"
)

# ERROR: Q:/b/u/c56xnmzt/external/protobuf+/src/google/protobuf/BUILD.bazel:462:11: Compiling src/google/protobuf/any_lite.cc [for tool] failed: undeclared inclusion(s) in rule '@@protobuf+//src/google/protobuf:protobuf_lite':
# this rule is missing dependency declarations for the following files included by 'src/google/protobuf/any_lite.cc':
#   'bazel-out/x64_windows-opt-exec-ST-d610928244b0/bin/external/protobuf+/src/google/protobuf/_virtual_includes/protobuf_lite/google/protobuf/port.h'
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "opentelemetry-proto", version = "1.4.0")
archive_override(
    module_name = "opentelemetry-proto",
    integrity = "sha256-U80yztsndi6iBgqcjYPkuCLeE9c7XV03ots89VAY1pQ=",
    patch_strip = 1,
    # Copied from https://github.com/bazelbuild/bazel-central-registry/tree/main/modules/opentelemetry-proto/1.3.1/patches
    patches = [
        "bazel/opentelemetry-proto.patch",
    ],
    strip_prefix = "opentelemetry-proto-1.4.0",
    urls = ["https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v1.4.0.tar.gz"]
)

bazel_dep(name = "prometheus-cpp", version = "1.3.0")

use_repo(
    use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension"),
    "local_config_cc",
)

# This is needed only for most of the `bazel mod xxx` functions to work.
#
# Otherwise it complaints with
#
# ERROR: in tag at https://bcr.bazel.build/modules/grpc-java/1.62.2/MODULE.bazel:89:15: no repository visible as
#        '@com_google_protobuf_javalite' to the repository '@@grpc-java+', but referenced by label
#        '@com_google_protobuf_javalite//:protobuf_javalite' in attribute 'target' of tag 'override'.
#      Is the module 'grpc-java' missing a bazel_dep or use_repo(..., "com_google_protobuf_javalite")?.
#
bazel_dep(name = "grpc-java", version = "1.67.1")

bazel_dep(name = "rules_cue", version = "0.9.0")
